tests/integration/features/html2pdf/_validations/01_invalid_path_to_html2pdf_template/test.itest
# @relation(SDOC-SRS-51, scope=file)

RUN: %expect_exit 1 %strictdoc export %S --formats=html2pdf --output-dir %T | filecheck %s --dump-input=fail

CHECK: error: config: html2pdf_template: invalid path to a template file: {{.*}}DOES_NOT_EXIST.
